src/test/ui/generator/static-not-unpin.stderr
error[E0277]: the trait bound `[static generator@$DIR/static-not-unpin.rs:11:25: 13:6 _]: std::marker::Unpin` is not satisfied
  --> $DIR/static-not-unpin.rs:14:5
   |
LL |     assert_unpin(generator);
   |     ^^^^^^^^^^^^ the trait `std::marker::Unpin` is not implemented for `[static generator@$DIR/static-not-unpin.rs:11:25: 13:6 _]`
   |
note: required by `assert_unpin`
  --> $DIR/static-not-unpin.rs:7:1
   |
LL | fn assert_unpin<T: Unpin>(_: T) {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
